<resources>
    <string name="app_name">UnitConverter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">C</string>
    <string name="point">.</string>
    <string name="plus_minus">+/-</string>

    <string name="length">Length</string>
    <string name="temperature">Temperature</string>
    <string name="mass">Mass</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>

    <string-array name="lengthUnits">
        <item>Metres</item>
        <item>Feet</item>
        <item>Miles</item>
    </string-array>
    <string-array name="temperatureUnits">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="massUnits">
        <item>Kilograms</item>
        <item>Pounds</item>
        <item>Ounces</item>
    </string-array>

</resources>