<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/unitCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/lengthOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_flat_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/length"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/temperatureOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_flat_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/temperature"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/messOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_flat_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/mass"
                android:textColor="@color/white" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/firstUnits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/lengthUnits"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/firstField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="right"
                android:minHeight="48dp"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/secondUnits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/lengthUnits"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/secondField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="right"
                android:minHeight="48dp"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonCopy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_copy" />

            <ImageButton
                android:id="@+id/buttonReverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_reverse" />

            <ImageButton
                android:id="@+id/buttonPaste"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_paste" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>